--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <img src="img/contact.jpg" width="250px" alt="Contact" title="Welcome to contact page !"/>
     <h3>You can contact us if you want ...</h3>
     <br />
-    <form method="post">
+    <form>
         <label for="username">Username :</label><br />
         <input type="text" id="username" name="username" required/><br />
         <label for="email">Email :</label><br />
