--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
     <h1>Log in page</h1>
     <img src="img/login.png" width="250px" alt="Log in page" title="Welcome to log in  page !"/><br/>
     <a href="register.html">You don't have account ? click here</a>
-    <form method="post">
+    <form>
         <label for="email">Email :</label><br />
         <input type="email" id="email" name="password" required/><br />
         <label for="password">Password :</label><br />
