--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     <h1>Register page</h1>
     <img src="img/signup.jpg" width="250px" alt="Register" title="Welcome to register page !"/><br/>
     <a href="login.html">You have account ? click here</a>
-    <form method="post">
+    <form>
         <label for="username">Username :</label>
         <input type="text" id="username" name="username" placeholder="Make it unique.." required/><br /><br/>
         <label for="email">Email :</label>
