--- a/wishlist.html
+++ b/wishlist.html
@@ -19,7 +19,7 @@
     <h3>What i prefer ?!</h3>
     <ol>
         <li>Bashka</li>
-        <img <img src="img/bashka.jpg" width="220px" alt="Bashka" title="it's bashka meal !"/>/>
+        <img src="img/bashka.jpg" width="220px" alt="Bashka" title="it's bashka meal !"/>
         <br />
         <li>Jalabeno burger</li>
         <img src="img/jakburger.jpg" width="220px" alt="Jalabeno burger" title="it's a jalabeno burger !"/>
